# web-automation-suite-playwright

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
pages/: base_page.py  cart_page.py  checkout_page.py  login_page.py  products_page.py
testdata/: credentials.py  credentials_example.py
tests/: conftest.py  test_api_mocking.py  test_cart.py  test_checkout.py  test_end_to_end.py  test_login.py  test_search.py  test_smoke.py
