[project]
name = "web-automation-suite-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-html>=4.1.1",
    "pytest-playwright>=0.8.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.0.1",
]
